sort: make parallel page-run merge reachable and gate default-on rollout (#99)
* bench: per-arm heap measurement and a configurable R sweep for the parallel merge

ParallelMergeBenchmark reported only process RSS, which is monotone across arms
in one JVM: the R=1 repeat inherited the R=8 arm's peak and read as a 3x
regression. Peak heap is the gating metric for merge-parallelism, so measure it
per arm with MemoryPoolMXBean peak usage, reset between arms - the same quantity
production reports as efficiency.peak_heap_bytes.

Make the R sweep configurable (swath.bench.ranges) so the knee can be located
without editing the class, and raise the timeout to a runaway backstop: the
corpus knobs, not the annotation, govern how long a sweep takes.

SortTransformParallelMergePropTest covered no cascading range: every property
runs under SortConfigs.base(), whose merge-budget-bytes is Long.MAX_VALUE, so
perRangeFanIn never falls below the segment count. That interaction is reachable
in production and gets likelier as R rises, since the budget is divided by R. Add
a property that pins each range at the max(2, ...) floor and asserts byte-exactness
against a non-cascading serial baseline.

* bench: forward swath.sort.* to arms and measure per-open-stream retained heap

Two gaps a methodology review found in the parallel-merge measurements.

The arm config answered only merge-parallelism and returned null for every
other key, so an arm could not hold one sort knob fixed while another moved.
That made the -Xmx16g/-Xmx32g R=32 comparison confounded: raising the heap to
lift merge-budget-bytes also changes G1's collection frequency, so the timing
gain could not be attributed to cascade removal on timing alone. Falling
through to the real system properties lets an arm pin merge-budget-bytes at a
constant heap, which isolates the cascade.

The R-linear peak-heap term was inferred by fitting the observed slope and
dividing by the segment count, then reused to explain that same slope -- a